--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,18 @@ body{
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
+
+.container { 
+  /*margin: 50px;*/
+  width: 80%; 
+}
+
+#sidebar {
+  position: absolute;
+  right: 0;
+  top: 80px;
+}
+
 .page {
     margin: 40px;
 }
@@ -37,6 +49,11 @@ h1{
 .clearfix:before,.clearfix:after {content: " "; display: table;}
 .clearfix:after {clear: both;}
 .clearfix {*zoom: 1;}
+
+.emission_timeline {
+   width: 400px;
+   height: 300px;
+}
 
 .foot img {
   width: 300px;
