--- a/css/main.css
+++ b/css/main.css
@@ -20,15 +20,16 @@ body{
 }
 
 
-.container { 
-  /*margin: 50px;*/
+.container {
   width: 80%; 
 }
 
 #sidebar {
   position: absolute;
-  right: 0;
+  right: 20px;
   top: 80px;
+  height: calc(100vh - 80px);
+  width: 25%;
 }
 
 .page {
@@ -51,8 +52,8 @@ h1{
 .clearfix {*zoom: 1;}
 
 .emission_timeline {
-   width: 400px;
-   height: 300px;
+   width: 100%;
+   height: 100%;
 }
 
 .foot img {
