--- a/css/main.css
+++ b/css/main.css
@@ -56,14 +56,47 @@ h1{
    height: 100%;
 }
 
+.foot {
+  position: relative;
+}
+
 .foot img {
   width: 300px;
 }
 
 #footprint {
   text-align: center;
-  display: none;
+  /* display: none; */
 }
+
+.foot #electricity {
+  position: absolute;
+  left: 42%;
+  top: 60%;
+  width: 18%;
+}
+
+.foot #water {
+  position: absolute;
+  left: 48%;
+  top: 20%;
+  width: 18%;
+}
+
+.foot #car {
+  position: absolute;
+  left: 40%;
+  top: 20%;
+  width: 18%;
+}
+
+/* .item-list btn {
+  width: 200px;
+}
+
+#dropdown1 li {
+  width: 150px;
+} */
 
 .footprint ul {
   list-style: none;
