--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ h1{
   margin-top: 2em;
 }
 
-#challenge-button:hover {
+.challenge-button:hover {
   background-color: rgba(200,200,200,0.6);
   cursor: pointer;
 }
