--- a/css/main.css
+++ b/css/main.css
@@ -143,3 +143,48 @@ h1{
   background-color: rgba(200,200,200,0.6);
   cursor: pointer;
 }
+
+#avatar1 {
+  width: 150px;
+  position: absolute;
+  top: 30px;
+  left: 50px;
+}
+
+#avatar2 {
+  width: 150px;
+  position: absolute;
+  top: 190px;
+  left: 50px;
+}
+
+
+@keyframes example {
+    0%   {left:-200px; top:130px;}
+    25%  {left:-100px; top:130px;}
+    50%  {left:0px; top:-80px;}
+    75%  {left:60px; top:-80px;}
+    100% {left:65px; top:-40px;}
+}
+
+#crown {
+  width: 100px;
+  height: 100px;
+  position: relative;
+  top: 130px;
+  left: -200px;
+  animation-name: example;
+  animation-duration: 4s;
+  animation-delay: 4s;
+  z-index: 10;
+  animation-fill-mode: forwards;
+}
+
+#chartFiller {
+  position: absolute;
+  width: 100%;
+  height: 400px;
+  top: 343px;
+  left: 0;
+  background-color: #F5F5F5;
+}
